schema, column and mapper creation has been developed

--- a/templates/dto.template.hbs
+++ b/templates/dto.template.hbs
@@ -1,3 +1,7 @@
 import AbstractDTO from 'nest-crud-abstraction/dist/payload/AbstractDTO';
 
-export default class {{classname}}DTO extends AbstractDTO {}
+export default class {{classname}}DTO extends AbstractDTO {
+{{#each columns}}
+    {{this.name}}: {{this.type}};
+{{/each}}
+}
