--- a/templates/entity.template.hbs
+++ b/templates/entity.template.hbs
@@ -4,7 +4,7 @@ import { Column, Entity } from 'typeorm';
 @Entity({ name: '{{entityName}}' })
 export default class {{className}} extends AbstractEntity {
 {{#each columns}}
-    @Column({name: "{{this.name}}", unique : {{this.unique}}, length : {{this.length}} })
+    @Column({ {{#each this}}{{@key}}: "{{this}}", {{/each}} })
     {{this.name}}: {{this.type}};
 
 {{/each}}
