module definition file

--- a/templates/definition.template.hbs
+++ b/templates/definition.template.hbs
@@ -1,5 +1,5 @@
 {{#each modules}}
-import {{this.preparedModuleName}} from "{{this.path}}";
+import { {{this.preparedModuleName}} } from "{{this.path}}";
 {{/each}}
 
 export const imports = [{{#each modules}} {{this.preparedModuleName}}, {{/each}}]
